--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,10 +170,15 @@ nav {
 }
 
 #new-game-button,
-#retry-button,
-#highscores-button {
+#retry-button {
     display: inline-block;
     margin: 0.6rem auto 0.6rem auto;
+    width: auto;
+}
+
+#highscores-button {
+    display: inline-block;
+    margin: 0.6rem auto 1.2rem auto;
     width: auto;
 }
 
@@ -326,7 +331,7 @@ nav {
     background-color: var(--primary);
     border: 2px solid var(--highlight) !important;
     border-radius: 1.9rem;
-    margin: 0.6rem 10vw 1.25rem;
+    margin: 0 10vw 1.25rem;
     padding-top: 0.6rem;
     transition: all 0.3s ease;
 }
@@ -387,7 +392,8 @@ nav {
 
     .quiz-container,
     .submission-container,
-    #question-section {
+    #question-section,
+    #results-section {
         margin: 20vh 20vw;
     } 
     
