--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,10 @@ body {
   font-family: var(--font);
 }
 
+h1 {
+  font-size: 1.6rem!important;
+}
+
 h2 {
   margin-top: 1.3rem;
   font-size: 1.3rem;
@@ -47,12 +51,11 @@ nav {
 }
 
 .logo {
-  margin: -0.3rem -0.3rem 0 0.4rem;
+  margin: -0.5rem -0.1rem 0 0.4rem;
 }
 
 .navbar-brand {
   color: var(--text-dark);
-  font-size: 1.75rem;
   font-weight: bold;
 }
 
@@ -376,6 +379,7 @@ nav {
 
 /* Medium devices (tablets, 768px and up) */
 @media screen and (min-width: 768px) {
+
   #success-logo {
     margin-left: 0.4rem;
   }
@@ -403,6 +407,17 @@ nav {
   #answer-buttons {
     grid-template-columns: repeat(2, 13rem);
   }
+}
+
+/* Large devices (laptops, 992px and up) */
+@media screen and (min-width: 992px) {
+h1 {
+  font-size: 2.2rem!important;
+}
+
+#navbar .logo {
+  width: 2.9rem;
+}
 }
 
 @media (hover: hover) and (pointer: fine) {
