--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,12 +41,14 @@ nav {
 }
 
 /* Navbar */
-#navbar {
+#navbar,
+#navbar-plain {
   background-color: var(--primary);
   border: 0.6rem black;
 }
 
-#navbar .logo {
+#navbar .logo,
+#navbar-plain .logo {
   width: 1.9rem;
 }
 
@@ -207,12 +209,6 @@ nav {
 .p-4 {
   padding-bottom: 0.5rem !important;
   padding-top: 1rem !important;
-}
-
-/* Success page */
-#success-logo {
-  margin-left: -0.56rem;
-  margin-right: -0.3rem;
 }
 
 /* Quiz setup */
@@ -383,10 +379,6 @@ nav {
 
 /* Medium devices (tablets, 768px and up) */
 @media screen and (min-width: 768px) {
-  #success-logo {
-    margin-left: 0.4rem;
-  }
-
   .ms-auto {
     margin-left: auto !important;
   }
@@ -410,6 +402,10 @@ nav {
   #answer-buttons {
     grid-template-columns: repeat(2, 13rem);
   }
+
+  #navbar-plain .container-fluid {
+    justify-content: flex-start !important;
+  }
 }
 
 /* Large devices (laptops, 992px and up) */
@@ -418,7 +414,8 @@ nav {
     font-size: 2.2rem !important;
   }
 
-  #navbar .logo {
+  #navbar .logo,
+  #navbar-plain .logo {
     width: 2.9rem;
   }
 }
