--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,8 @@ body {
 }
 
 h1 {
-  font-size: 1.6rem !important;
+  font-size: 1.6rem;
+  font-weight: bold;
 }
 
 h2 {
@@ -59,6 +60,7 @@ nav {
 .navbar-brand {
   color: var(--text-dark);
   font-weight: bold;
+  font-size: 1.6rem;
 }
 
 .navbar-nav {
@@ -221,6 +223,10 @@ nav {
   border-radius: 1.9rem;
   margin: 22vh 5vw;
   height: auto;
+}
+
+#welcome {
+  padding: 0.9rem 0.3rem 0;
 }
 
 #username {
@@ -412,6 +418,10 @@ nav {
 @media screen and (min-width: 992px) {
   h1 {
     font-size: 2.2rem !important;
+  }
+
+  .navbar-brand {
+    font-size: 2.2rem;
   }
 
   #navbar .logo,
