--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
-
 /* CSS variables */
 :root {
   --primary: #bcb7a4;
@@ -361,6 +359,10 @@ nav {
   border-radius: 1.9rem;
   margin: 22vh 5vw;
   height: auto;
+}
+
+.success-title {
+  margin-top: 1rem !important;
 }
 
 #redirect-message,
